--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Caminos de Michoacán</title>
+    <title>Caminos de Michoacán</title>}
+    
+<!-- Google Analitics tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TXH1LMQJGQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TXH1LMQJGQ');
+</script>
+    
     <style>
         /* Estilos CSS */
         * {
