--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <title>Caminos de Michoacán</title>}
+
+    <!-- Adds Propush -->
+    <meta name="pushsdk" content="c8b7a080a05a5c4f28ef2f3db1e371de">
     
 <!-- Google Analitics tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-TXH1LMQJGQ"></script>
