--- a/nocheDeMuertos.html
+++ b/nocheDeMuertos.html
@@ -3,6 +3,9 @@
 <head>
     <title>Noche de Muertos en Michoacán</title>
     <meta charset="UTF-8">
+     <!-- Adds Propush -->
+    <meta name="pushsdk" content="c8b7a080a05a5c4f28ef2f3db1e371de">
+    
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="styles.css" />
     <style>
