--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Caminos de Michoacán</title>}
+    <title>Caminos de Michoacán</title>
 
     <!-- Adds Propush -->
     <meta name="pushsdk" content="c8b7a080a05a5c4f28ef2f3db1e371de">
